@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.34 2012/09/15 15:03:23 obache Exp $
+# $NetBSD: Makefile,v 1.35 2012/10/02 21:25:49 asau Exp $
 
 DISTNAME=	MySQL-python-${DIST_VERSION}
 PKGNAME=	${PYPKGPREFIX}-mysqldb-${DIST_VERSION:S/c/rc/}
@@ -12,15 +12,8 @@ HOMEPAGE=	http://sourceforge.net/projects/mysql-python
 COMMENT=	MySQL interface for Python
 LICENSE=	gnu-gpl-v2
 
-DEPENDS+=	${PYPKGPREFIX}-setuptools>=0.6c6:../../devel/py-setuptools
-
-PYDISTUTILSPKG=	yes
-PY_PATCHPLIST=	yes
-PYSETUPINSTALLARGS= --single-version-externally-managed --record plist.txt
-PLIST_SUBST+=   DIST_VERSION=${DIST_VERSION} PYVERSSUFFIX=${PYVERSSUFFIX}
-
+EGG_NAME=	${DISTNAME:S/MySQL-/MySQL_/}
 
 .include "../../mk/mysql.buildlink3.mk"
-
-.include "../../lang/python/extension.mk"
+.include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
