@@ -1,5 +1,5 @@
-@comment $NetBSD: PLIST,v 1.5 2012/10/07 21:28:34 wiz Exp $
-${PLIST.cygdb}bin/cygdb${PYVERSSUFFIX}
+@comment $NetBSD: PLIST,v 1.6 2012/10/07 22:42:52 wiz Exp $
+bin/cygdb${PYVERSSUFFIX}
 bin/cython${PYVERSSUFFIX}
 ${PYSITELIB}/Cython/Build/BuildExecutable.py
 ${PYSITELIB}/Cython/Build/BuildExecutable.pyc
@@ -181,35 +181,35 @@ ${PYSITELIB}/Cython/Compiler/Visitor.so
 ${PYSITELIB}/Cython/Compiler/__init__.py
 ${PYSITELIB}/Cython/Compiler/__init__.pyc
 ${PYSITELIB}/Cython/Compiler/__init__.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Cygdb.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Cygdb.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Cygdb.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/DebugWriter.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/DebugWriter.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/DebugWriter.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/TestLibCython.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/TestLibCython.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/TestLibCython.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/__init__.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/__init__.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/__init__.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/cfuncs.c
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/codefile
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/test_libcython_in_gdb.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/test_libcython_in_gdb.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/test_libcython_in_gdb.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/test_libpython_in_gdb.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/test_libpython_in_gdb.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/Tests/test_libpython_in_gdb.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/__init__.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/__init__.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/__init__.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/libcython.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/libcython.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/libcython.pyo
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/libpython.py
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/libpython.pyc
-${PLIST.cygdb}${PYSITELIB}/Cython/Debugger/libpython.pyo
+${PYSITELIB}/Cython/Debugger/Cygdb.py
+${PYSITELIB}/Cython/Debugger/Cygdb.pyc
+${PYSITELIB}/Cython/Debugger/Cygdb.pyo
+${PYSITELIB}/Cython/Debugger/DebugWriter.py
+${PYSITELIB}/Cython/Debugger/DebugWriter.pyc
+${PYSITELIB}/Cython/Debugger/DebugWriter.pyo
+${PYSITELIB}/Cython/Debugger/Tests/TestLibCython.py
+${PYSITELIB}/Cython/Debugger/Tests/TestLibCython.pyc
+${PYSITELIB}/Cython/Debugger/Tests/TestLibCython.pyo
+${PYSITELIB}/Cython/Debugger/Tests/__init__.py
+${PYSITELIB}/Cython/Debugger/Tests/__init__.pyc
+${PYSITELIB}/Cython/Debugger/Tests/__init__.pyo
+${PYSITELIB}/Cython/Debugger/Tests/cfuncs.c
+${PYSITELIB}/Cython/Debugger/Tests/codefile
+${PYSITELIB}/Cython/Debugger/Tests/test_libcython_in_gdb.py
+${PYSITELIB}/Cython/Debugger/Tests/test_libcython_in_gdb.pyc
+${PYSITELIB}/Cython/Debugger/Tests/test_libcython_in_gdb.pyo
+${PYSITELIB}/Cython/Debugger/Tests/test_libpython_in_gdb.py
+${PYSITELIB}/Cython/Debugger/Tests/test_libpython_in_gdb.pyc
+${PYSITELIB}/Cython/Debugger/Tests/test_libpython_in_gdb.pyo
+${PYSITELIB}/Cython/Debugger/__init__.py
+${PYSITELIB}/Cython/Debugger/__init__.pyc
+${PYSITELIB}/Cython/Debugger/__init__.pyo
+${PYSITELIB}/Cython/Debugger/libcython.py
+${PYSITELIB}/Cython/Debugger/libcython.pyc
+${PYSITELIB}/Cython/Debugger/libcython.pyo
+${PYSITELIB}/Cython/Debugger/libpython.py
+${PYSITELIB}/Cython/Debugger/libpython.pyc
+${PYSITELIB}/Cython/Debugger/libpython.pyo
 ${PYSITELIB}/Cython/Debugging.py
 ${PYSITELIB}/Cython/Debugging.pyc
 ${PYSITELIB}/Cython/Debugging.pyo
