@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2012/07/13 18:45:33 kleink Exp $
+# $NetBSD: Makefile,v 1.14 2012/10/03 21:58:07 wiz Exp $
 
-DISTNAME=	Text-vCard-2.11
+DISTNAME=	Text-vCard-2.12
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	1
 SVR4_PKGNAME=	p5tva
 CATEGORIES=	textproc perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=../by-authors/id/L/LL/LLAP/}
