@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2012/10/02 17:28:59 wiz Exp $
+# $NetBSD: Makefile,v 1.17 2012/10/08 13:04:28 asau Exp $
 #
 
 DISTNAME=	pytz-2012f
@@ -14,8 +14,7 @@ LICENSE=	mit
 
 USE_LANGUAGES=	# none
 
-# py-setuptools needed, but not available; package itself is ready
-#PYTHON_VERSIONS_INCLUDE_3X=	yes
+PYTHON_VERSIONS_INCLUDE_3X=	yes
 
 REPLACE_PYTHON=	pytz/tzfile.py
 
