@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.15 2012/06/14 07:45:19 sbd Exp $
+# $NetBSD: Makefile,v 1.16 2012/07/12 16:21:53 roy Exp $
 
 DISTNAME=	uwsgi-1.2.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
@@ -12,16 +12,14 @@ LICENSE=	gnu-gpl-v2
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
-DEPENDS+=	${PYPKGPREFIX}-setuptools>=0.6c9:../../devel/py-setuptools
-
 USE_LANGUAGES=		c
-PYDISTUTILSPKG=		yes
 
 PLIST_SUBST+=		PYVERSSUFFIX=${PYVERSSUFFIX}
+EGG_NAME=	${DISTNAME:S/uwsgi/uWSGI/}
 
 post-install:
 	mv ${DESTDIR}${PREFIX}/bin/uwsgi ${DESTDIR}${PREFIX}/bin/uwsgi-${PYVERSSUFFIX}
 
-.include "../../lang/python/extension.mk"
+.include "../../lang/python/egg.mk"
 .include "../../textproc/libxml2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
