@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3275 2012/10/15 12:32:52 wiz Exp $
+$NetBSD: CHANGES-2012,v 1.3278 2012/10/16 08:01:26 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5086,3 +5086,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated databases/p5-Fsdb to 2.26nb1 [wiz 2012-10-15]
 	Updated devel/p5-Test-Compile to 0.13nb4 [wiz 2012-10-15]
 	Added math/harminv version 1.3.1 [asau 2012-10-15]
+	Updated math/py-scipy to 0.7.2nb1 [wiz 2012-10-16]
+	Updated graphics/py-pyfits to 2.4.0nb1 [wiz 2012-10-16]
+	Updated textproc/p5-Text-vCard to 2.12 [kleink 2012-10-16]
